--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,8 +3,12 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/auth/login">Login</a></li>
-            <li><a href="/auth/logout">Logout</a></li>
+            {{#if session.user}}
+                <li><a href="/auth/logout">Logout</a></li>
+            {{else}}
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
+            {{/if}}
         </ul>
     </nav>
 </header>
