--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,13 @@
 {{#extend "layouts/main"}}
     {{#content "body"}}
         <h2>Register</h2>
+        <form action="/auth/register" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id ="password" name="password" required>
+            <button type="submit"> Register</button>
+        </form>
 
     {{/content}}
 {{/extend}}
