--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,12 @@
 {{#extend "layout/main"}}
     {{#content "body"}}
         <h2>Welcome to the Tech Blog</h2>
-
+        {{#each posts}}
+            <div class="post">
+                <h3><a href="/posts/{{id}}">{{title}}</a></h3>
+                <p>{{content}}</p>
+                <p>Author: {{User.username}}</p>
+            </div>
+        {{/each}}
     {{/content}}
 {{/extend}}
