--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -7,5 +7,14 @@
         {{#each post.Comments}}
             <p>{{User.username}}: {{content}}</p>
         {{/each}}
+
+        {{#if session.user}}
+            {{#if (eq session.user.id post.userId)}}
+                <a href="/posts/{{post.id}}/edit">Edit Post</a>
+                <form action="/posts/{{post.id}}/delete" method="post">
+                    <button type="submit">Delete Post</button>
+                </form>
+            {{/if}}
+        {{/if}}
     {{/content}}
 {{/extend}}
