--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -15,6 +15,7 @@
                     <button type="submit">Delete Post</button>
                 </form>
             {{/if}}
+            <a href="/posts/{{post.id}}/comments/add">Add Comment</a>
         {{/if}}
     {{/content}}
 {{/extend}}
