--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,15 @@
-{{#extend "layout/main"}}
-    {{#content "body"}}
-        <h2>Welcome to the Tech Blog</h2>
-        {{#each posts}}
-            <div class="post">
-                <h3><a href="/posts/{{id}}">{{title}}</a></h3>
-                <p>{{content}}</p>
-                <p>Author: {{User.username}}</p>
-            </div>
-        {{/each}}
-    {{/content}}
+{{!-- Extend the main layout --}}
+{{#extend "main"}}
+
+{{#content "body"}}
+<h1>Welcome to the Blog</h1>
+
+{{#each posts as |post|}}
+    <div class="post">
+        <h2>{{post.title}}</h2>
+        <p>{{post.body}}</p>
+    </div>
+{{/each}}
+{{/content}}
+
 {{/extend}}
