--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=devicde-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>Tech Blog</title>
+    <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
-    {{> header}}
-    <main>
+    <div class="container">
         {{{body}}}
-    </main>
-
-    {{> footer}}
+    </div>
 </body>
 </html>
