--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,13 +1,22 @@
-{{#extend "layouts/main"}}
-    {{#content "body"}}
-        <h2>Register</h2>
-        <form action="/auth/register" method="post">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Password:</label>
-            <input type="password" id ="password" name="password" required>
-            <button type="submit"> Register</button>
-        </form>
+{{!-- Extend the main layout --}}
+{{#extend "main"}}
 
+    {{#content "body"}}
+        <form action="/register" method="post">
+            <div>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required/>
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required/>
+            </div>
+            <div>
+                <label for="repeatPassword">Repeat Password:</label>
+                <input type="password" id="repeatPassword" name="repeatPassword" required/>
+            </div>
+            <button type="submit">Register</button>
+        </form>
     {{/content}}
+
 {{/extend}}
