--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,10 +5,10 @@
 <h1>Welcome to the Blog</h1>
 
 {{#each posts as |post|}}
-    <div class="post">
-        <h2>{{post.title}}</h2>
-        <p>{{post.body}}</p>
-    </div>
+    <article class="post">
+        <h2><a href=/posts/{{post.id}}">{{post.title}}</a></h2>
+        <p>{{Posted on {{post.createdAt}}</p>
+    </article>
 {{/each}}
 {{/content}}
 
